functional components and structure, search bar, detailed view

--- a/src/App.less
+++ b/src/App.less
@@ -3,3 +3,7 @@
 @import './components/SearchBar/SearchBar.less';
 @import './components/Settings/Setting.less';
 @import './components/DetailedView/DetailedView.less';
+
+.dataGrid{
+    display: block;
+}
