--- a/src/components/DataGrid/DataGrid.less
+++ b/src/components/DataGrid/DataGrid.less
@@ -1,10 +1,10 @@
-.dataGrid{
-    display: block;
-}
+
 
 .dataTable{
     min-width: 50%;
     border: 1px solid gray;
+    height: 50vh;
+    overflow: auto;
     .tableHeader{
         background-color: #f5f5f5;
         font-weight: 700;
@@ -12,7 +12,9 @@
     }
     .tableRow{
         border-bottom: 1px solid gray;
-        :hover .infoCell{
+    }
+    .infoCell{
+        :hover{
             background-color: #f5f5f5;
             cursor: pointer;
         }
