all component converted to ant design

--- a/src/App.less
+++ b/src/App.less
@@ -1,7 +1,9 @@
 @import '~antd/dist/antd.css';
+@import './components/common/CustomTitle/CustomTitle.less';
 @import './components/DataGrid/DataGrid.less';
 @import './components/SearchBar/SearchBar.less';
 @import './components/DetailedView/DetailedView.less';
+
 
 .dataGrid{
     display: block;
