interaction observer api added, naming convention changed, custom Axios added

--- a/src/components/UserTable/UserTable.less
+++ b/src/components/UserTable/UserTable.less
@@ -3,7 +3,7 @@
 .dataTable{
     min-width: 50%;
     border: 1px solid gray;
-    height: 50vh;
+    height: 100vh;
     overflow: auto;
     .tableHeader{
         background-color: #f5f5f5;
@@ -20,6 +20,11 @@
         }
     }
 
+    
+}
+.loadMore{
+    text-align: center;
+    width: 100%;
 }
 
 .loading{
