--- a/src/App.less
+++ b/src/App.less
@@ -1,9 +1,11 @@
-@import './components/common/CustomTitle/CustomTitle.less';
 @import './components/UserTable/UserTable.less';
 @import './components/SearchBar/SearchBar.less';
 @import './components/DetailedView/DetailedView.less';
+@import './components/SettingsPanel/SettingsPanel.less';
+@import './components/common/CustomHeader/CustomHeader.less';
+@import './components/common/CustomSidebar/CustomSidebar.less';
+@import './components/common/CustomFooter/CustomFooter.less';
 
-
-.dataGrid{
-    display: block;
+.content{
+    padding: 20px;
 }
