--- a/src/components/UserTable/UserTable.less
+++ b/src/components/UserTable/UserTable.less
@@ -1,17 +1,19 @@
-
-
-.dataTable{
+.userTable{
     min-width: 50%;
-    border: 1px solid gray;
-    height: 100vh;
+    border: 0px solid gray;
+    height: 65vh;
     overflow: auto;
     .tableHeader{
-        background-color: #f5f5f5;
+        background-color: #001529;
         font-weight: 700;
-        border-bottom: 1px solid gray;
+        color: white;
     }
     .tableRow{
         border-bottom: 1px solid gray;
+        &:hover{    
+            background-color: #f5f5f5;
+
+        }
     }
     .infoCell{
         :hover{
@@ -25,6 +27,9 @@
 .loadMore{
     text-align: center;
     width: 100%;
+    color: white;
+    padding: 10px;
+    background-color: #001529;
 }
 
 .loading{
