mobile responsiveness added

--- a/src/components/common/CustomSidebar/CustomSidebar.less
+++ b/src/components/common/CustomSidebar/CustomSidebar.less
@@ -1,3 +1,18 @@
 .customSidebar{
     min-height: 100vh;
+    .ant-menu{
+        background-color: transparent;
+        .ant-menu-item{
+            color: #fff;
+        }
+        .ant-menu-item-selected {
+            color: #5B6BF4;
+        }
+    }
+
+    @media @phone-down {
+        width: 0 !important;
+        max-width: 0 !important;
+        min-width: 0 !important;
+    }
 }
